login and sign up frontend layout added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/dhurbatara-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fe Boiler Plate</title>
+    <title>Dhurbatara Quiz 
+    
+    </title>
   </head>
   <body>
     <div id="root"></div>
