--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </title>
   </head>
   <body>
-    <div id="root"></div>
+    <body class="h-full">  <div id="root" class="h-full"></div>  
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
